fix misalignment and buttons for css, rearrange the sequence for add activity and delete activity

--- a/static/editorNew.css
+++ b/static/editorNew.css
@@ -23,13 +23,17 @@
     border-radius: 40px;
 }
 
+#dayNumber {
+    margin-top: 6px;
+    margin-right: 15px;
+}
 
 .addDayButton {
     display: flex;
     justify-content: center;
 }
 
-.addDayButton button, #saveItinerary button, #deleteItinerary button, .editButton, .mainAddButton, #addNewActivityButton, #deleteDayButton, #confirmButton, .deleteButton {
+.addDayButton button, #saveItinerary button, #deleteItinerary button, .editButton, .mainAddButton, #addNewActivityButton, #deleteDayButton, .confirmButton, .deleteButton{
     display: flex;
     justify-content: center;
     font-size: large;
@@ -40,9 +44,10 @@
     color: green;
     transition: 0.5s;
     cursor: pointer;
+    padding: 5px 10px 5px 10px;
 }
 
-.addDayButton button:hover, #saveItinerary button:hover, #deleteItinerary button:hover, .editButton:hover, .mainAddButton:hover, #addNewActivityButton:hover, #deleteDayButton:hover, #confirmButton:hover, .deleteButton:hover {
+.addDayButton button:hover, #saveItinerary button:hover, #deleteItinerary button:hover, .editButton:hover, .mainAddButton:hover, #addNewActivityButton:hover, #deleteDayButton:hover, .confirmButton:hover, .deleteButton:hover{
     background-color: green;
     color: white;
     transition: 0.5s;
@@ -67,10 +72,14 @@
     transition: 0.5s;
 }
 
+.mainAddButton {
+    height: 39px;
+}
 
 #saveItinerary button, #deleteItinerary button {
-    padding-top:5px;
+    padding-top: 5px;
 }
+
 
 #dayBox {
     width: 70%;
@@ -114,6 +123,7 @@
 #deleteItineraryButton h5, #saveItineraryButton h5 {
     padding-left: 5px;
     padding-right: 5px;
+    padding-top: 5px;
 }
 
 #footer {
@@ -126,10 +136,6 @@
 
 .mainAddButton, #newActivityPlaceholder, #addNewActivityButton, #deleteDayButton {
     margin: 6px 15px 0 15px;
-}
-
-.mainAddButton {
-    height: 32px;
 }
 
 .addActivityForm {
@@ -153,13 +159,22 @@
 
 .deleteForm {
     display: inline-block;
-    margin-left: 10px;
 }
 
 .activityName {
     font-size: large;
 }
 
+.deleteButton {
+    margin-left: 10px;
+}
+
 #newActivityPlaceholder, #newActivityNamePlaceholder {
     border: 2px solid green;
+
+}
+
+#newActivityNamePlaceholder {
+    height: 40px;
+    padding: 5px;
 }
